# erobotica_omnibot

./: CMakeLists.txt  package.xml
launch/: velocity_controller.launch
mesh/: 1_a_roda.stl  1_o_rolamento.stl  chassi.stl  chassi1.stl  roda.stl  rolamento.stl  rolamento1.stl
urdf/: main.urdf  main.urdf.xacro  rim.1aroda.xacro  rim.urdf.xacro  roller.urdf.xacro
